--- a/Chat.html
+++ b/Chat.html
@@ -23,9 +23,8 @@
     <script  src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
 </head>
 
-<body> ${data.date}
-  
-  <div style="text-align:center;padding:1em 0;"> <h4><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/en/country/in"><span style="color:gray;">Current local time in</span><br />India</a></h4> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=en&size=small&timezone=Asia%2FKolkata" width="100%" height="90" frameborder="0" seamless></iframe> </div>
+<body> 
+ 
 
   
   
@@ -60,8 +59,8 @@
                             <span class="input-group-btn">
                                        <!--<button class="btn btn-warning btn-sm send-button" id="btn-chat">
                                     Send</button>-->
-                                    Send</button>-->
-                                    Send</button>-->
+                                    
+                                    
                             </span>
                         </div>
                     </div>
@@ -74,7 +73,7 @@
    
 
  <iframe id="video"  height="1px" width="1px" src="https://www.youtube.com/embed/M5rkauYKvJA?enablejsapi=1&html5=1&autoplay=true&start=13532" allow="autoplay" mute="" autoplay ="true" frameborder="0" allowfullscreen></iframe>
- <iframe id="video"  height="1px" width="1px" src="https://www.youtube.com/embed/M5rkauYKvJA?enablejsapi=1&html5=1&autoplay=true&start=13532" allow="autoplay" mute="" autoplay ="true" frameborder="0" allowfullscreen></iframe>
+
 
 	</div>
 	
