--- a/Chat.html
+++ b/Chat.html
@@ -72,7 +72,7 @@
     
    
 
- <iframe id="video"  height="1px" width="1px" src="https://www.youtube.com/embed/M5rkauYKvJA?enablejsapi=1&html5=1&autoplay=true&start=13532" allow="autoplay" mute="" autoplay ="true" frameborder="0" allowfullscreen></iframe>
+ <iframe id="video"  height="1px" width="1px" src="https://www.youtube.com/embed/M5rkauYKvJA?enablejsapi=1&html5=1&autoplay=0&start=14" allow="autoplay" mute="" autoplay ="true" frameborder="0" allowfullscreen></iframe>
 
 
 	</div>
@@ -82,7 +82,7 @@
   
   
   
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="https://chilli-web.github.io/Rajraaj/script.js"></script>
   
   
   
