--- a/Chat.html
+++ b/Chat.html
@@ -4,7 +4,7 @@
     <title>CHILLITEN</title>
     <style>
       
-      iframe{ display:none ;
+      iframe{ display:block;
       } ;
      
    
