--- a/Chat.html
+++ b/Chat.html
@@ -72,7 +72,7 @@
     
    
 
- <iframe id="video"  height="1px" width="1px" src="https://www.youtube.com/embed/M5rkauYKvJA?enablejsapi=1&html5=1&autoplay=1&start=14" allow="autoplay" mute="" autoplay ="1" frameborder="0" ></iframe>
+ <iframe id="video"  height="1px" width="1px" src="https://www.youtube.com/embed/M5rkauYKvJA?enablejsapi=1&html5=1&autoplay=1" allow="autoplay" mute="" autoplay ="1" frameborder="0" ></iframe>
 
 
 	</div>
